--- a/package.json
+++ b/package.json
@@ -26,11 +26,9 @@
     "debug": "^3.1.0",
     "decompress": "^4.2.0",
     "decompress-tar": "^4.1.1",
-    "download": "^6.2.5",
     "expand-home-dir": "^0.0.3",
     "follow-redirects": "^1.4.1",
-    "fs-extra": "^5.0.0",
-    "request": "^2.83.0"
+    "fs-extra": "^5.0.0"
   },
   "devDependencies": {
     "@types/node": "^8.0.56",
