--- a/package.json
+++ b/package.json
@@ -22,15 +22,16 @@
   "author": "Lionel Villard",
   "license": "Apache-2.0",
   "dependencies": {
-    "@types/debug": "^0.0.30",
+    "child-process-promise": "^2.2.1",
     "debug": "^3.1.0",
     "decompress": "^4.2.0",
     "decompress-tar": "^4.1.1",
-    "expand-home-dir": "^0.0.3",
     "follow-redirects": "^1.4.1",
-    "fs-extra": "^5.0.0"
+    "fs-extra": "^5.0.0",
+    "properties-parser": "^0.3.1"
   },
   "devDependencies": {
+    "@types/debug": "^0.0.30",
     "@types/node": "^8.0.56",
     "typescript": "^2.6.2"
   }
