--- a/.travis.yml
+++ b/.travis.yml
@@ -11,5 +11,5 @@ env:
 before_install:
   - "sh -e /etc/init.d/xvfb start"
   - sleep 3
-  - tools/travis/fshinstall.sh
+  - tools/travis/install.sh
 
