--- a/.travis.yml
+++ b/.travis.yml
@@ -11,5 +11,8 @@ env:
 before_install:
   - "sh -e /etc/init.d/xvfb start"
   - sleep 3
+
+install:
+  - tools/travis/bxsetup.sh
   - tools/travis/install.sh
 
