--- a/.travis.yml
+++ b/.travis.yml
@@ -11,9 +11,11 @@ env:
 before_install:
   - "sh -e /etc/init.d/xvfb start"
   - sleep 3
+  - tools/travis/bxsetup.sh
   - export PATH=$TRAVIS_BUILD_DIR/IBM\ Cloud\ Functions\ Shell-linux-x64/:$PATH
 
 install:
-  - tools/travis/bxsetup.sh
   - tools/travis/install.sh
 
+script:
+  - fsh plugin list
