--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "prepublishOnly": "tsc",
     "pretest": "tsc",
     "compilenowatch": "tsc",
-    "test": "mocha",
+    "test": "mocha plugin/test --recursive --timeout 60000",
     "compile": "tsc -watch -p ./"
   },
   "repository": {
@@ -23,6 +23,7 @@
   "license": "Apache-2.0",
   "dependencies": {
     "child-process-promise": "^2.2.1",
+    "colors": "^1.1.2",
     "debug": "^3.1.0",
     "decompress": "^4.2.0",
     "decompress-tar": "^4.1.1",
@@ -31,8 +32,11 @@
     "properties-parser": "^0.3.1"
   },
   "devDependencies": {
+    "@types/colors": "^1.1.3",
     "@types/debug": "^0.0.30",
     "@types/node": "^8.0.56",
+    "assert": "^1.4.1",
+    "mocha": "^5.0.1",
     "mocha-typescript": "^1.1.12",
     "typescript": "^2.6.2"
   }
