--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "author": "Lionel Villard",
   "license": "Apache-2.0",
   "dependencies": {
+    "@octokit/rest": "^14.0.9",
     "child-process-promise": "^2.2.1",
     "colors": "^1.1.2",
     "debug": "^3.1.0",
