--- a/.travis.yml
+++ b/.travis.yml
@@ -11,9 +11,9 @@ env:
 before_install:
   - "sh -e /etc/init.d/xvfb start"
   - sleep 3
-  - export PATH=$TRAVIS_BUILD_DIR/IBM\ Cloud\ Functions\ Shell-linux-x64/:$PATH
   - tools/travis/bxsetup.sh
   - tools/travis/fshclone.sh
+  - export PATH=$TRAVIS_BUILD_DIR/shell/app/bin:$PATH
 
 install:
   - npm install
