--- a/.travis.yml
+++ b/.travis.yml
@@ -7,13 +7,14 @@ sudo: required
 env:
   global:
     - DISPLAY=:99
+    - SHELL_DIR=$TRAVIS_BUILD_DIR/../shell
 
 before_install:
   - "sh -e /etc/init.d/xvfb start"
   - sleep 3
   - tools/travis/bxsetup.sh
   - tools/travis/fshclone.sh
-  - export PATH=$TRAVIS_BUILD_DIR/shell/app/bin:$PATH
+  - export PATH=$SHELL_DIR/app/bin:$PATH
 
 install:
   - npm install
