--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "decompress-tar": "^4.1.1",
     "follow-redirects": "^1.4.1",
     "fs-extra": "^5.0.0",
+    "jwt-decode": "^2.2.0",
     "npm": "^5.7.1",
     "properties-parser": "^0.3.1",
     "simple-git": "^1.92.0"
